--- a/PinBoard/templates/service/header.html.twig
+++ b/PinBoard/templates/service/header.html.twig
@@ -1,5 +1,11 @@
 {% block header %}
 <div class="content-header">
-    <div>Header</div>
+    <div>Header
+        <select id="select_lang" onchange="getval(this);">
+            <option value="en">EN</option>
+            <option value="fr">FR</option>
+            <option value="pl">PL</option>
+        </select>
+    </div>
 </div>
 {% endblock header %}
