--- a/Remote/templates/service/index.html.twig
+++ b/Remote/templates/service/index.html.twig
@@ -10,11 +10,14 @@
                     <div id="#typed-welcome">I'am looking for</div>
                 </div>
                 <div class="index-form">
-                    <div class="name" id="search_job">
-                    {{ form_widget(form.name) }}
+                    <div class="job" id="search_job">
+                        {{ form_widget(form.job) }}
+                    </div>
+                    <div class="place" id="search_place">
+                        {{ form_widget(form.place) }}
                     </div>
                     <div class="place" id="locationField">
-                    in {{ include('maps.html.twig') }}{{ form_widget(form.place) }}
+                        in {{ include('maps.html.twig') }}{{ form_widget(form.place) }}
                     </div>
                 </div>
             </div>
