--- a/Remote/templates/service/results.html.twig
+++ b/Remote/templates/service/results.html.twig
@@ -4,7 +4,8 @@
             {% include "service/header.html.twig" %}
             <div class="results-content">
                 <div class="text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nisl massa, aliquam ac tempor eget, dictum vel leo. In velit mauris, vulputate ut nisl a, luctus vestibulum dui. Phasellus vel orci et lacus dapibus porta eget viverra nulla. Proin eleifend neque quis est semper, sed porttitor justo elementum. Sed lobortis tristique dolor id cursus. Morbi lacinia sodales enim ac volutpat.
+                    {{ results.getId() }}
+                    {{ results.job.getNamePl() }}
                 </div>
             </div>
         </div>
