--- a/Remote/templates/service/results.html.twig
+++ b/Remote/templates/service/results.html.twig
@@ -7,7 +7,7 @@
                     {% if results|length > 0 %}
                         {% for value in results %}
                             <div>
-                            {{ value.id }} |
+                            {{ value.getId }} |
                             {{ value.job.getNamePl() }} |
                             {{ value.country.getCountryPl() }} |
                             {{ value.area.getArea() }} |
