--- a/Remote/templates/maps_en.html.twig
+++ b/Remote/templates/maps_en.html.twig
@@ -54,6 +54,6 @@
         }
     }
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjZJYc-v79_MNVQDKhBpECQZwBIY8pChA&libraries=places&callback=initAutocomplete&language=fr"
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjZJYc-v79_MNVQDKhBpECQZwBIY8pChA&libraries=places&callback=initAutocomplete&language=en"
         async defer></script>
 
